@@ -762,6 +762,7 @@ Elementos informativos:
 * trunk: Troncal a través de la cual se realiza la llamada saliente, o se recibe
   la llamada entrante.
 * phone: número de teléfono de callerid o marcado
+* queue: número de la cola por la que se espera que pase la llamada
 
 Ejemplo:
 Para una llamada saliente, se puede esperar esta secuencia de eventos:
@@ -774,6 +775,7 @@ Para una llamada saliente, se puede esperar esta secuencia de eventos:
         <new_status>Placing</new_status>
         <retry>1</retry>
         <phone>1099</phone>
+        <queue>8000</queue>
     </callprogress>
 </event>
 <event>
@@ -786,6 +788,7 @@ Para una llamada saliente, se puede esperar esta secuencia de eventos:
         <retry>1</retry>
         <trunk>IAX2/1099</trunk>
         <phone>1099</phone>
+        <queue>8000</queue>
     </callprogress>
 </event>
 <event>
@@ -799,6 +802,7 @@ Para una llamada saliente, se puede esperar esta secuencia de eventos:
         <retry>1</retry>
         <trunk>IAX2/1099</trunk>
         <phone>1099</phone>
+        <queue>8000</queue>
     </callprogress>
 </event>
 <event>
@@ -812,6 +816,7 @@ Para una llamada saliente, se puede esperar esta secuencia de eventos:
         <retry>1</retry>
         <trunk>IAX2/1099</trunk>
         <phone>1099</phone>
+        <queue>8000</queue>
     </callprogress>
 </event>
 
@@ -2861,4 +2866,195 @@ En caso de éxito:
     <callprogress_response>
         <success/>
     </callprogress_response>
+</response>
+
+
+Requerimiento "campaignlog"
+Este requerimiento lista los eventos de progreso de una campaña determinada, en
+un intervalo de tiempo. Si se omite el intervalo, se asume el día actual del 
+sistema.
+
+Atributos o argumentos:
+* campaign_type: Tipo de la campaña, uno de 'incoming' u 'outgoing'
+* campaign_id: ID en la base de datos de la campaña a listar. Para campañas
+  salientes, este parámetro es requerido. Para campañas entrantes, se omite este
+  parámetro si se deben listar eventos para llamadas entrantes no asociadas a
+  una campaña.
+* queue: Cola entrante a seleccionar. Para campañas salientes, este parámetro
+  se ignora. Para campañas entrantes, este parámetro selecciona los eventos
+  asociados a llamadas entrantes no asociadas a una campaña entrante. Si se
+  indica a la vez queue y campaign_id, campaign_id tiene prioridad y queue se
+  ignora.
+* datetime_start: Fecha inicial del rango, en formato yyyy-mm-dd. Si se omite,
+  se asume la fecha actual.
+* datetime_end: Fecha final del rango, en formato yyyy-mm-dd. Si se omite, se
+  asume la fecha actual.
+
+Respuesta:
+* logentries: Lista de elementos de tipo logentry. Cada elemento logentry tiene
+  los siguientes campos:
+    * id: ID interno de base de datos del registro.
+    * datetime_entry: Fecha y hora en la que se produjo la transición de estado
+    * campaign_type: Tipo de la campaña, uno de 'incoming' u 'outgoing'
+    * campaign_id: ID en la base de datos de la campaña a la que pertenece la 
+      llamada. Este valor siempre está presente para una llamada saliente, pero 
+      puede no estar presente para una llamada entrante.
+    * call_id: ID en la base de datos de la llamada que se hace referencia en evento.
+    * new_status: El nuevo estado al cual ha llegado la llamada. Los eventos 
+      reportados pueden ser uno de los siguientes:
+      Placing: se ha empezado a colocar la llamada saliente. El único parámetro
+        válido es retry.
+      Dialing: se ha empezado a marcar la llamada saliente. Se conocen los valores
+        de retry y trunk.
+      Ringing: la llamada saliente está timbrando y va a conectarse a la cola. Se
+        conocen los valores de uniqueid, retry, trunk.
+      OnQueue: la llamada está en la cola esperando ser asignada un agente. Se
+        conocen los valores de uniqueid, retry, trunk.
+      Failure: la llamada no ha podido ser conectada. Los valores válidos son 
+        dependientes del estado en el cual se detectó el fallo.
+      OnHold: la llamada ha entrado en hold. Se conocen los valores de uniqueid, 
+        retry, trunk.
+      OffHold: la llamada ha salido de hold. Se conocen los valores de uniqueid, 
+        retry, trunk.
+      Success: la llamada ha sido conectada con un agente
+      Hangup: la llamada ha sido desconectada del agente.
+      ShortCall: la llamada ha durado muy poco para una interacción con el agente.
+    * retry: Para llamadas salientes, el número de intento de marcado que 
+      corresponde a este cambio de estado. Siempre 0 para la llamada entrante.
+    * uniqueid: ID único de Asterisk para la llamada correspondiente al intento.
+    * trunk: Troncal a través de la cual se realiza la llamada saliente, o se recibe
+      la llamada entrante.
+    * phone: número de teléfono de callerid o marcado
+    * queue: número de la cola por la que se espera que pase la llamada
+    * agentchannel: Canal de agente que atendió la llamada. Sólo válido para 
+      estados Success, Hangup, ShortCall.
+    * duration: Duración de la llamada, en segundos. Sólo válido para estados
+      Hangup y ShortCall.
+Los campos son esencialmente idénticos a los del evento callprogress, a 
+excepción de id, agentchannel. El estado Success corresponde al evento agentlinked,
+y el estado Hangup/ShortCall corresponde al evento agentunlinked.
+
+Ejemplo:
+<request id="4">
+    <campaignlog>
+        <campaign_type>outgoing</campaign_type>
+        <campaign_id>9</campaign_id>
+        <datetime_start>2010-01-01</datetime_start>
+        <datetime_end>2013-01-02</datetime_end>
+    </campaignlog>
+</request>
+
+Respuesta:
+En caso de éxito:
+<response id="4">
+<campaignlog_response>
+  <logentries>
+    <logentry>
+      <id>168</id>
+      <datetime_entry>2013-01-07 12:02:23</datetime_entry>
+      <phone>1065</phone>
+      <queue>8000</queue>
+      <campaign_type>outgoing</campaign_type>
+      <campaign_id>9</campaign_id>
+      <call_id>111</call_id>
+      <new_status>Placing</new_status>
+      <retry>2</retry>
+    </logentry>
+    <logentry>
+      <id>169</id>
+      <datetime_entry>2013-01-07 12:02:24</datetime_entry>
+      <phone>1065</phone>
+      <queue>8000</queue>
+      <campaign_type>outgoing</campaign_type>
+      <campaign_id>9</campaign_id>
+      <call_id>111</call_id>
+      <new_status>Dialing</new_status>
+      <retry>2</retry>
+      <trunk>SIP/1065</trunk>
+    </logentry>
+    <logentry>
+      <id>170</id>
+      <datetime_entry>2013-01-07 12:02:26</datetime_entry>
+      <phone>1065</phone>
+      <queue>8000</queue>
+      <campaign_type>outgoing</campaign_type>
+      <campaign_id>9</campaign_id>
+      <call_id>111</call_id>
+      <new_status>Ringing</new_status>
+      <retry>2</retry>
+      <uniqueid>1357578143.3</uniqueid>
+      <trunk>SIP/1065</trunk>
+    </logentry>
+    <logentry>
+      <id>171</id>
+      <datetime_entry>2013-01-07 12:02:26</datetime_entry>
+      <phone>1065</phone>
+      <queue>8000</queue>
+      <campaign_type>outgoing</campaign_type>
+      <campaign_id>9</campaign_id>
+      <call_id>111</call_id>
+      <new_status>OnQueue</new_status>
+      <retry>2</retry>
+      <uniqueid>1357578143.3</uniqueid>
+      <trunk>SIP/1065</trunk>
+    </logentry>
+    <logentry>
+      <id>172</id>
+      <datetime_entry>2013-01-07 12:02:29</datetime_entry>
+      <phone>1065</phone>
+      <queue>8000</queue>
+      <campaign_type>outgoing</campaign_type>
+      <campaign_id>9</campaign_id>
+      <call_id>111</call_id>
+      <new_status>Success</new_status>
+      <retry>2</retry>
+      <uniqueid>1357578143.3</uniqueid>
+      <trunk>SIP/1065</trunk>
+      <agentchannel>SIP/1064</agentchannel>
+    </logentry>
+    <logentry>
+      <id>173</id>
+      <datetime_entry>2013-01-07 12:03:24</datetime_entry>
+      <phone>1065</phone>
+      <queue>8000</queue>
+      <campaign_type>outgoing</campaign_type>
+      <campaign_id>9</campaign_id>
+      <call_id>111</call_id>
+      <new_status>OnHold</new_status>
+      <retry>2</retry>
+      <uniqueid>1357578143.3</uniqueid>
+      <trunk>SIP/1065</trunk>
+      <agentchannel>SIP/1064</agentchannel>
+    </logentry>
+    <logentry>
+      <id>174</id>
+      <datetime_entry>2013-01-07 12:03:38</datetime_entry>
+      <phone>1065</phone>
+      <queue>8000</queue>
+      <campaign_type>outgoing</campaign_type>
+      <campaign_id>9</campaign_id>
+      <call_id>111</call_id>
+      <new_status>OffHold</new_status>
+      <retry>2</retry>
+      <uniqueid>1357578204.7</uniqueid>
+      <trunk>SIP/1065</trunk>
+      <agentchannel>SIP/1064</agentchannel>
+    </logentry>
+    <logentry>
+      <id>175</id>
+      <datetime_entry>2013-01-07 12:03:57</datetime_entry>
+      <phone>1065</phone>
+      <queue>8000</queue>
+      <campaign_type>outgoing</campaign_type>
+      <campaign_id>9</campaign_id>
+      <call_id>111</call_id>
+      <new_status>Hangup</new_status>
+      <retry>2</retry>
+      <uniqueid>1357578204.7</uniqueid>
+      <trunk>SIP/1065</trunk>
+      <duration>88</duration>
+      <agentchannel>SIP/1064</agentchannel>
+    </logentry>
+  </logentries>
+</campaignlog_response>
 </response>
